# src/infrastructure/databases/mongoDb/schemas/Equipamiento.ts
@@ -1,25 +1,0 @@
-import mongoose, { Schema } from "mongoose";
-import { EquipamientoMongo } from "../../../../domain/types/equipamientos.types";
-
-const equipamientoSchema: Schema = new Schema<EquipamientoMongo>({
-  index: String,
-  name: String,
-  category: String,
-  description: [String],
-  cost: {
-    quantity: Number,
-    unit: String
-  },
-  bonuses: {
-    armor_class: Number,
-    saving_throws: Number
-  },
-  isMagic: Boolean,
-  weapon: {},
-  armor: {},
-  weight: Number,
-  content: [{ index: String, quantity: Number }]
-}, { collection: 'Equipamientos' });
-
-const EquipamientoModel = mongoose.model<EquipamientoMongo>("Equipamientos", equipamientoSchema);
-export default EquipamientoModel;
