# src/infrastructure/http/routes/equipamiento.routes.ts
@@ -1,10 +1,3 @@
-import { Router } from "express";
+import equipmentRoutes from "./equipment.routes";
 
-import { equipamientoController, authMiddleware } from "../../dependencies";
-
-const router = Router();
-
-router.get('/equipment/type/:type', authMiddleware, equipamientoController.getEquipamientosPorTipo);
-router.post('/equipment/types', authMiddleware, equipamientoController.getEquipamientosPorTipos);
-
-export default router; 
+export default equipmentRoutes;
